# slippy-api/api/v1/openapi.json
@@ -2775,15 +2775,6 @@
               "description": "Pipeline step name",
               "type": "string"
             }
-          },
-          {
-            "description": "Bypass terminal-overwrite guard",
-            "in": "header",
-            "name": "X-Force-Overwrite",
-            "schema": {
-              "description": "Bypass terminal-overwrite guard",
-              "type": "string"
-            }
           }
         ],
         "requestBody": {
@@ -2842,15 +2833,6 @@
             "required": true,
             "schema": {
               "description": "Pipeline step name",
-              "type": "string"
-            }
-          },
-          {
-            "description": "Bypass terminal-overwrite guard",
-            "in": "header",
-            "name": "X-Force-Overwrite",
-            "schema": {
-              "description": "Bypass terminal-overwrite guard",
               "type": "string"
             }
           }
@@ -2972,15 +2954,6 @@
             "required": true,
             "schema": {
               "description": "Pipeline step name",
-              "type": "string"
-            }
-          },
-          {
-            "description": "Bypass terminal-overwrite guard",
-            "in": "header",
-            "name": "X-Force-Overwrite",
-            "schema": {
-              "description": "Bypass terminal-overwrite guard",
               "type": "string"
             }
           }
